[package]

name = "snowid"
version = "0.1.2"

edition = "2021"
rust-version = "1.83.0"

authors = ["Maksim Sasnouski <qeeqez@gmail.com>"]
description = "A Rust library for generating SnowID - a Snowflake-like timestamp-based distributed unique identifier"

license = "MIT"
readme = "README.md"
keywords = ["snowflake", "id", "uuid", "tsid", "twitter"]
categories = ["algorithms", "data-structures"]

documentation = "https://docs.rs/snowid"
homepage = "https://github.com/qeeqez/snowid-rust"
repository = "https://github.com/qeeqez/snowid-rust"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
thiserror = "2.0.11"
chrono = "0.4.39"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"

[[bench]]
name = "snowid_benchmarks"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"

[[example]]
name = "distributed"
path = "examples/distributed.rs"
