[package]

name = "snowid"
version = "0.3.0"

edition = "2024"
rust-version = "1.90.0"

authors = ["Maksim Sasnouski <maksim@rixl.com>"]
description = "A Rust library for generating SnowID - a Snowflake-like timestamp-based distributed unique identifier"

license = "MIT"
readme = "README.md"
keywords = ["snowflake", "id", "uuid", "tsid", "twitter"]
categories = ["algorithms", "data-structures"]

documentation = "https://docs.rs/snowid"
homepage = "https://github.com/qeeqez/snowid-rust"
repository = "https://github.com/qeeqez/snowid-rust"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
thiserror = "2.0.17"
base62 = "2.2.3"

[dev-dependencies]
criterion = { version = "0.8.0", features = ["html_reports"] }
rand = "0.9.2"
chrono = "0.4.42"

[[bench]]
name = "snowid_benchmarks"
harness = false

[[bench]]
name = "base62_benchmarks"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"

[[example]]
name = "distributed"
path = "examples/distributed.rs"
