[package]
name = "snowid"
version = "0.1.0"
edition = "2021"
rust-version = "1.85.0"
description = "A Rust library for generating SnowID - a Snowflake-like timestamp-based distributed unique identifier"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true

[dependencies]
thiserror = "2.0.11"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }
rand = "0.9.0"

[[bench]]
name = "snowid_benchmarks"
harness = false

[[example]]
name = "basic"
path = "examples/basic.rs"

[[example]]
name = "custom_config"
path = "examples/custom_config.rs"

[[example]]
name = "distributed"
path = "examples/distributed.rs"
